# edinitsa

./: CMakeLists.txt
src/: CMakeLists.txt  CardData.h  ClientMainWindow.cpp  ClientMainWindow.h  ServerMainWindow.cpp  ServerMainWindow.h  edinitsa.ui  edinitsa_server.ui  enums.h  generate.py  main_client.cpp  messages.h
src/widgets/: CanvasWidget.cpp  CanvasWidget.h  CardWidget.cpp  CardWidget.h  HandWidget.cpp  HandWidget.h  card.ui  hand.ui
